# Improved-Training-of-Wasserstein-GANs

./: .gitignore  main.py  pyproject.toml
logs/lightning_logs/version_0/: events.out.tfevents.1703534547.Asims-MBP.local.19634.0
logs/lightning_logs/version_1/: events.out.tfevents.1703534585.Asims-MBP.local.19647.0
logs/lightning_logs/version_10/: events.out.tfevents.1703539242.Asims-MBP.local.20807.0
logs/lightning_logs/version_11/: events.out.tfevents.1703539416.Asims-MBP.local.20860.0
logs/lightning_logs/version_12/: events.out.tfevents.1703661492.Asims-MBP.local.25756.0
logs/lightning_logs/version_13/: events.out.tfevents.1703661541.Asims-MBP.local.25775.0
logs/lightning_logs/version_14/: events.out.tfevents.1703661587.Asims-MBP.local.25799.0
logs/lightning_logs/version_15/: events.out.tfevents.1703662575.Asims-MBP.local.26026.0
logs/lightning_logs/version_16/: events.out.tfevents.1703674333.Asims-MBP.local.26440.0
logs/lightning_logs/version_17/: events.out.tfevents.1703675543.Asims-MBP.local.26936.0
logs/lightning_logs/version_18/: events.out.tfevents.1703675622.Asims-MBP.local.26969.0
logs/lightning_logs/version_19/: events.out.tfevents.1703675676.Asims-MBP.local.26989.0
logs/lightning_logs/version_2/: events.out.tfevents.1703535255.Asims-MBP.local.19760.0
logs/lightning_logs/version_20/: events.out.tfevents.1703675717.Asims-MBP.local.27007.0
logs/lightning_logs/version_21/: events.out.tfevents.1703675738.Asims-MBP.local.27016.0
logs/lightning_logs/version_22/: events.out.tfevents.1703675799.Asims-MBP.local.27036.0
(+16 files in other folders)
