[tool.poetry]
name = "improved training of wasserstein gans"
version = "0.1.0"
description = ""
authors = ["Asim Poptani <asim@poptani.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
lightning = "^2.1.3"
torchvision = "^0.16.2"
wandb = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

